# Week4_Dynamic-data-display_Prefab

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: __init__.py  debug.py  settings.py  streamlit_app.py
app/chat/: __init__.py  controller.py
app/data/: __init__.py  analyzer.py  demo.py  mysql.py  schema.py  schema_context.py  sql_validator.py
app/llm/: __init__.py  claude.py  json_utils.py  planner.py  prompts.py  schemas.py
app/ui/: __init__.py  prefab_file.py  prefab_renderer.py  prefab_source.py  spec_builder.py  spec_validator.py  specs.py  streamlit_renderer.py  theme.py  widget_catalog.py
